native/bridge/include/bubi_fm77av.h

/*
 * BubiFM77AV40EX 製品用 C ABI（design.md 4.1〜4.3、development_plan.md 6 WP1）。
 *
 * 方針は design.md 16.1「C ABIとCore thread」の決定記録に従う。
 *   - 不透明ハンドルのみを公開する。C++型をDartへ露出しない。
 *   - 固定幅整数、POD構造体、列挙されたエラーコードだけを使う。
 *   - C境界を跨ぐメモリは確保側が解放する。
 *   - 例外を境界外へ送出しない。
 *   - VMの生成・操作・破棄はすべてCore threadに閉じる。
 *
 * 型空間（コマンド種別・イベント種別・エラー）はWP1で design.md 4.2/4.3 の
 * 分類を網羅して定義する。実装はWP1の範囲（ライフサイクルとリセット）に限り、
 * 未実装の種別は BFM_ERR_UNSUPPORTED を返す。呼び出し側の誤りを表す
 * BFM_ERR_INVALID_ARGUMENT とは区別する。
 */
#ifndef BUBI_FM77AV_H_
#define BUBI_FM77AV_H_

#include <stdint.h>

/*
 * 静的ライブラリをアプリへ -force_load する構成のため、既定の
 * hidden visibility とReleaseのstripの両方から公開シンボルを守る。
 * 片方だけでは Release ビルドで dart:ffi の lookup が失敗する。
 */
#if defined(_WIN32)
#  define BFM_API __declspec(dllexport)
#else
#  define BFM_API __attribute__((visibility("default")))
#endif

#ifdef __cplusplus
extern "C" {
#endif

/* 不透明ハンドル。実体は公開しない。 */
typedef struct bfm_session bfm_session;

typedef enum {
	BFM_OK = 0,
	BFM_ERR_INVALID_ARGUMENT = 1, /* 呼び出し側の誤り（NULL、範囲外など） */
	BFM_ERR_INVALID_STATE = 2,    /* 二重開始、停止中の操作など */
	BFM_ERR_QUEUE_FULL = 3,       /* コマンドキューが上限に達した */
	BFM_ERR_NO_EVENT = 4,         /* poll時にイベントがない */
	BFM_ERR_CORE_FAILED = 5,      /* Core thread内で異常が発生した */
	BFM_ERR_UNSUPPORTED = 6,      /* 型としては定義済みだが未実装 */
	BFM_ERR_INTERNAL = 7          /* 境界で捕捉した想定外の例外 */
} bfm_result;

typedef enum {
	BFM_STATE_STOPPED = 0,
	BFM_STATE_STARTING = 1,
	BFM_STATE_RUNNING = 2,
	BFM_STATE_STOPPING = 3,
	BFM_STATE_FAILED = 4
} bfm_state;

typedef enum {
	BFM_RESET_NORMAL = 0,
	BFM_RESET_SPECIAL = 1 /* BREAK付き特殊リセット */
} bfm_reset_kind;

/*
 * ブートモード（specification.md SYS-04）。値はupstreamの
 * config.boot_mode と同じで、コアはリセット時にこれを読む。
 */
typedef enum {
	BFM_BOOT_BASIC = 0,
	BFM_BOOT_DOS = 1
} bfm_boot_mode;

/*
 * コマンド種別。design.md 4.2 の6分類を上位バイトで区切る。
 * WP1で実装するのは 0x01xx のリセットだけであり、他は予約である。
 * 予約値は enum として存在するが bfm_send_command は BFM_ERR_UNSUPPORTED を
 * 返す。実装するWPを各行に記す。
 */
typedef enum {
	/* ライフサイクル。start/stop は専用関数を使う。 */
	BFM_CMD_RESET = 0x0100,                  /* WP1 */
	BFM_CMD_SPECIAL_RESET = 0x0101,          /* WP1 */

	/* 実行 */
	BFM_CMD_SET_SPEED_MULTIPLIER = 0x0200,   /* M3 SYS-05 */
	BFM_CMD_SET_FULL_SPEED = 0x0201,         /* M3 SYS-06 */
	BFM_CMD_SET_BOOT_MODE = 0x0202,          /* WP2 SYS-04。arg0 は bfm_boot_mode */
	BFM_CMD_SET_CPU_TYPE = 0x0203,           /* M3 SYS-03 */

	/* 媒体 */
	BFM_CMD_INSERT_FDD = 0x0300,             /* WP5 FDD-01 */
	BFM_CMD_EJECT_FDD = 0x0301,              /* WP5 FDD-01 */
	BFM_CMD_SET_FDD_WRITE_PROTECT = 0x0302,  /* M3 FDD-03 */
	BFM_CMD_SET_FDD_TIMING = 0x0303,         /* M3 FDD-05 */
	BFM_CMD_SET_FDD_CRC_CHECK = 0x0304,      /* M3 FDD-06 */
	BFM_CMD_INSERT_CMT = 0x0310,             /* M7 P2 */
	BFM_CMD_EJECT_CMT = 0x0311,              /* M7 P2 */
	BFM_CMD_CONTROL_CMT = 0x0312,            /* M7 P2 */

	/* 入力 */
	BFM_CMD_KEY_DOWN = 0x0400,               /* WP3 INP-01 */
	BFM_CMD_KEY_UP = 0x0401,                 /* WP3 INP-01 */
	BFM_CMD_MOUSE = 0x0402,                  /* M7 P2 */
	BFM_CMD_JOYSTICK = 0x0403,               /* M3 INP-03 */
	BFM_CMD_AUTO_KEY = 0x0404,               /* M3 INP-05 */

	/* 構成 */
	BFM_CMD_SET_SOUND_TYPE = 0x0500,         /* M3 AUD-03 */
	BFM_CMD_SET_OPTION_SWITCH = 0x0501,      /* M3 SYS-03 */
	BFM_CMD_SET_VOLUME = 0x0502,             /* M3 AUD-05 */
	BFM_CMD_SET_FRAME_RATE = 0x0503,         /* M3 VID-05 */

	/* 状態 */
	BFM_CMD_SAVE_STATE = 0x0600,             /* M3 STA-01 */
	BFM_CMD_LOAD_STATE = 0x0601,             /* M3 STA-02 */

	/* デバッグ */
	BFM_CMD_DEBUGGER_OPEN = 0x0700,          /* M7 DBG-01 */
	BFM_CMD_DEBUGGER_CLOSE = 0x0701,         /* M7 DBG-01 */
	BFM_CMD_DEBUGGER_EXECUTE = 0x0702        /* M7 DBG-02 */
} bfm_command_kind;

typedef struct {
	uint32_t kind;    /* bfm_command_kind */
	int32_t reserved; /* 0を入れる。構造体の詰め物を明示する。 */
	int64_t arg0;
	int64_t arg1;
	/*
	 * ファイルパス等。呼び出し中だけ借用し、実装側が複製する。
	 * 関数から戻った後の寿命は呼び出し側が自由に決めてよい。
	 */
	const char* text;
} bfm_command;

/* design.md 4.3 の低頻度イベント。高頻度データはここを通さない。 */
typedef enum {
	BFM_EVENT_LIFECYCLE_CHANGED = 0,   /* WP1 */
	BFM_EVENT_COMMAND_COMPLETED = 1,   /* WP1 */
	BFM_EVENT_ERROR = 2,               /* WP1 */
	BFM_EVENT_MEDIA_CHANGED = 3,       /* WP5 */
	BFM_EVENT_MEDIA_ACCESS_CHANGED = 4,/* WP5 */
	BFM_EVENT_TAPE_POSITION_CHANGED = 5,/* M7 P2 */
	BFM_EVENT_FDD_MECHANICAL = 6,      /* M3 AUD-04 */
	BFM_EVENT_LED_CHANGED = 7,         /* WP3 INP-02 */
	BFM_EVENT_SCREEN_MODE_CHANGED = 8, /* WP3 */
	BFM_EVENT_PERFORMANCE_CHANGED = 9, /* WP6 */
	BFM_EVENT_STATE_SLOT_CHANGED = 10, /* M3 STA-01 */
	BFM_EVENT_DEBUGGER_STOPPED = 11    /* M7 DBG-02 */
} bfm_event_kind;

typedef struct {
	uint32_t kind;       /* bfm_event_kind */
	int32_t code;        /* ERROR のとき bfm_result、COMMAND_COMPLETED のとき結果 */
	uint64_t command_id; /* COMMAND_COMPLETED のとき、対応するコマンドの連番 */
	int64_t arg0;        /* LIFECYCLE_CHANGED のとき bfm_state、
	                      * LED_CHANGED のとき0x1=INS/0x2=KANA/0x4=CAPSのビット合成 */
	int64_t arg1;
} bfm_event;

typedef struct {
	/*
	 * コアがアプリケーションデータを置く位置。ホストが必ず決める。
	 * 空文字やNULLは受け付けない。upstreamの既定に委ねると
	 * ~/CommonSourceCodeProject/ を作ってしまい design.md 11.3 と食い違う。
	 *
	 * upstreamの get_application_path() は初回呼出しで値を固定するため、
	 * この値はプロセス全体で1つに限る。2回目以降の bfm_create が違う値を
	 * 渡した場合は BFM_ERR_INVALID_STATE を返す。変更にはプロセス再起動が要る。
	 */
	const char* home_dir;

	/*
	 * 利用者が選んだROMディレクトリ。NULLまたは空なら結線しない。
	 *
	 * コアはROMを1つのディレクトリからしか読まないため、ブリッジが
	 * 作業ディレクトリを用意し、ここの各ファイルへシンボリックリンクを
	 * 張る。原本は複製せず元の位置に残す（design.md 16.1）。
	 * ROMの検証はホスト側の責務であり、ここでは行わない。
	 */
	const char* rom_dir;

	/* 起動時のブートモード（bfm_boot_mode）。既定は BFM_BOOT_BASIC。 */
	int32_t boot_mode;

	/* キュー上限。0なら既定値（コマンド64、イベント256）。 */
	uint32_t command_queue_capacity;
	uint32_t event_queue_capacity;
} bfm_create_options;

/* 確保側が bfm_destroy で解放する。out は成功時だけ書き換える。 */
BFM_API bfm_result bfm_create(const bfm_create_options* options, bfm_session** out);
/* NULL可。二重破棄以外は冪等。 */
BFM_API void bfm_destroy(bfm_session* session);

BFM_API bfm_result bfm_start(bfm_session* session);
/* 冪等。停止済みでも BFM_OK を返す。 */
BFM_API bfm_result bfm_stop(bfm_session* session);

/* 投入した連番を out_command_id へ返す。完了は同じIDのイベントで通知する。 */
BFM_API bfm_result bfm_reset(bfm_session* session, bfm_reset_kind kind,
                             uint64_t* out_command_id);
BFM_API bfm_result bfm_send_command(bfm_session* session, const bfm_command* command,
                                    uint64_t* out_command_id);

/* イベントが無ければ BFM_ERR_NO_EVENT を返す。out は呼び出し側の所有。 */
BFM_API bfm_result bfm_poll_event(bfm_session* session, bfm_event* out);

BFM_API int32_t bfm_get_state(bfm_session* session);

/*
 * コアが実際にROMを読み USERDIC.DAT を書くディレクトリを、終端NUL付きで
 * out へ書く。連結規則はupstreamの get_application_path() が決めるため、
 * ホスト側で組み立てず必ずここから得ること。
 * out_size が足りない場合は BFM_ERR_INVALID_ARGUMENT を返す。
 */
BFM_API bfm_result bfm_get_core_directory(bfm_session* session, char* out,
                                          uint32_t out_size);


/*
 * 映像（design.md 6、16.1「映像の受け渡しとmacOS Texture方式」）。
 *
 * コアのバッファは渡さない。解像度が変わるとコアが確保し直すため、
 * 渡したポインターがその瞬間に無効になる。ここで返すのはブリッジが
 * 所有する面であり、release するまで内容も大きさも変わらない。
 *
 * pixels は BGRA8888、上から下へ、幅×高さの連続領域である。
 * コアはアルファを書かないため、ブリッジが 0xff を埋めてある。
 * 埋めないと画面全体が背景と混ざる。
 */
typedef struct {
	const uint32_t* pixels;
	uint32_t width;
	uint32_t height;
	uint32_t reserved; /* 0。構造体の詰め物を明示する。 */
	uint64_t generation;
} bfm_video_frame;

/*
 * 最新の完成フレームを借りる。まだ1枚もなければ BFM_ERR_NO_EVENT を返す。
 * 借りたら必ず bfm_release_video_frame を同じ generation で呼ぶこと。
 * 返すまでその面は書き潰されない。
 *
 * どのスレッドから呼んでもよい。VMには触れない。
 * 呼び手を待たせないため、Core threadの複製が終わるのを待つことはない。
 */
BFM_API bfm_result bfm_acquire_video_frame(bfm_session* session,
                                           bfm_video_frame* out);

/* 借りた面を返す。未知の generation は黙って無視する。 */
BFM_API void bfm_release_video_frame(bfm_session* session, uint64_t generation);

/*
 * 最新の完成フレームの世代番号。まだ1枚もなければ0。
 * 借りずに「変わったかどうか」だけを知りたいときに使う。
 * 描画側はこれで変化を見てから転送すればよい（VID-07）。
 */
BFM_API uint64_t bfm_video_generation(bfm_session* session);

typedef struct {
	uint64_t frames_run;
	uint64_t commands_accepted;
	uint64_t commands_rejected; /* キュー飽和で拒否した数 */
	uint64_t events_dropped;    /* UI遅延で捨てた古いイベント数 */
	/*
	 * Core thread以外からVM操作境界へ入った回数。
	 * 正常動作では常に0でなければならない（development_plan.md 6 WP1
	 * 「Core threadだけがVMを操作することをテストする」）。
	 */
	uint64_t vm_access_violations;
	/* 公開したフレーム数と、書ける面が尽きて捨てたフレーム数。 */
	uint64_t frames_published;
	uint64_t frames_dropped;
	/*
	 * 音声（design.md 7、16.1）。audio_frames_producedはCore threadが
	 * vm->create_sound()で取り出したフレーム数の累計。
	 * audio_underrun_framesはbfm_read_audioが無音で埋めたフレーム数、
	 * audio_overrun_framesは読み手が追いつかず最古から捨てたフレーム数の
	 * 累計。どちらも常時0とは限らないが、再生が追いついていれば
	 * 増加が緩やかに収まる。
	 */
	uint64_t audio_frames_produced;
	uint64_t audio_underrun_frames;
	uint64_t audio_overrun_frames;
} bfm_stats;

BFM_API bfm_result bfm_get_stats(bfm_session* session, bfm_stats* out);

/*
 * 音声（design.md 7、16.1「音声はVMの駆動源にしない」）。
 *
 * コアのPCMをブリッジが所有する有界リングへ蓄え、ここから複製で渡す。
 * frame_capacity分を必ず埋めて返す。足りない分は無音で埋め、
 * bfm_stats.audio_underrun_framesを増やす。どのスレッドから呼んでもよい。
 * VMには触れない。
 */
BFM_API bfm_result bfm_read_audio(bfm_session* session, int16_t* out,
                                  uint32_t frame_capacity);

/*
 * 出力フォーマット（サンプルレート、チャネル数）。プロセス内で固定であり、
 * セッションの状態に関わらず得られる。
 */
BFM_API bfm_result bfm_get_audio_format(bfm_session* session,
                                        uint32_t* out_sample_rate,
                                        uint32_t* out_channels);

#ifdef __cplusplus
} /* extern "C" */
#endif

#endif /* BUBI_FM77AV_H_ */